--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   font_awesome_flutter: ^10.7.0
   carousel_slider: ^4.2.1
+  rive: ^0.13.9
 
 dev_dependencies:
   flutter_test:
